--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ h1 {
     background-color: #1f2937;
     color: white;
     display: flex;
-    flex-direction: row;
     align-items: center;
     gap: 50px;
-    justify-content: center;
+    flex: 1;
+    justify-content: space-around;
 }
 
 .sign-up {
@@ -55,6 +55,38 @@ h1 {
 .hero-right {
     height: 150px;
     width: 360px;
+    background-color: #e5e7eb;
+}
+
+.box-container {
+    text-align: center;
+}
+
+#info {
+    display: flex;
+    justify-content: center;
+    gap: 35px;
+}
+
+.boxes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.boxes p {
+    max-width: 150px;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    width: 150px;
+    border: #3882F6;
+    border-style: solid;
+    border-radius: 15px;
     background-color: #e5e7eb;
 }
 
@@ -86,7 +118,10 @@ footer {
 }
 
 .content {
-    padding: 50px 0px;
+    padding: 70px 0px;
+}
+.box-container h2 {
+    margin-bottom: 42px;
 }
 
 .cta {
@@ -119,12 +154,6 @@ footer {
     border-radius: 5px;
     padding: 5px 25px;
     background-color: #3882F6;
-}
-
-.box {
-    height: 50px;
-    width: 50px;
-    border: 2px blue;
 }
 
 .quote-container {
