--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
+@media screen and (max-width:350px) {
+    header {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    ul {
+        padding: 0;
+    }
+
+    #hero {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .cta {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 20px;
+    }
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -6,6 +30,7 @@ body {
 }
 
 header {
+    padding: 0 15px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -34,6 +59,7 @@ h1 {
     justify-content: center;
     align-items: center;
     gap: 50px;
+    padding: 0px 20px;
 }
 
 
@@ -70,6 +96,7 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 35px;
+    flex-wrap: wrap;
 }
 
 .boxes {
@@ -168,6 +195,7 @@ footer {
 }
 
 #quote {
+    margin: 30px;
     display: flex;
     max-width: 400px;
     justify-content: space-between;
